--- a/ HomeWork_1/app/src/main/AndroidManifest.xml
+++ b/ HomeWork_1/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tinkoff.hw1">
 
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Hw1">
-        <activity android:name=".MainActivity">
+        <service
+            android:name=".service.ServicePickerContact"
+            android:enabled="true"
+            android:exported="false" />
+        <activity android:name=".activity.SecondActivity" />
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,5 +24,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
