--- a/CourseWork/app/build.gradle
+++ b/CourseWork/app/build.gradle
@@ -44,4 +44,6 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$appCompatVersion"
     implementation "com.google.android.material:material:$materialVersion"
     implementation "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxJavaVersion"
+    implementation "com.jakewharton.rxbinding4:rxbinding:$rxBinding"
 }
