--- a/CourseWork/build.gradle
+++ b/CourseWork/build.gradle
@@ -36,4 +36,6 @@ ext {
     appCompatVersion = '1.3.1'
     materialVersion = '1.4.0'
     constraintLayoutVersion = '2.1.1'
+    rxJavaVersion = '2.1.1'
+    rxBinding = '4.0.0'
 }
