--- a/CourseWork/build.gradle
+++ b/CourseWork/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.4.21"
+    ext.hiltPlugin = '2.38.1'
     repositories {
         google()
         jcenter()
@@ -8,6 +9,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltPlugin"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -38,4 +40,8 @@ ext {
     constraintLayoutVersion = '2.1.1'
     rxJavaVersion = '2.1.1'
     rxBinding = '4.0.0'
+    hiltAndroid = '2.35'
+    shimmerLayout = '0.5.0'
+    fragmentKtx = '1.3.6'
+    activityKtx = '1.3.1'
 }
