--- a/CourseWork/app/src/main/AndroidManifest.xml
+++ b/CourseWork/app/src/main/AndroidManifest.xml
@@ -6,10 +6,11 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".CourseWorkApp"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CourseWork">
-        <activity android:name=".MainActivity">
+        <activity android:name=".presentation.activity.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,7 +18,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ChatActivity"
+            android:name=".presentation.activity.chat.ChatActivity"
             android:theme="@style/Theme.CourseWork.ChatActivity"></activity>
     </application>
 
