--- a/CourseWork/build.gradle
+++ b/CourseWork/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     ext.hiltPlugin = '2.38.1'
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.1"
@@ -19,7 +19,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
