--- a/CourseWork/app/build.gradle
+++ b/CourseWork/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-parcelize'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.5.21'
 }
 
 android {
@@ -52,6 +53,16 @@ dependencies {
     implementation "androidx.activity:activity-ktx:$activityKtx"
     implementation "com.facebook.shimmer:shimmer:$shimmerLayout"
 
+    implementation "com.squareup.retrofit2:retrofit:$retrofit"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:$serilizationConverterForRetrofit"
+    implementation "com.squareup.okhttp3:logging-interceptor:$loggingInterceptor"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.4.0"
+
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:$serilizationConverter"
+
     implementation "com.google.dagger:hilt-android:$hiltAndroid"
     kapt "com.google.dagger:hilt-android-compiler:$hiltAndroid"
+
+    implementation "com.github.bumptech.glide:glide:$glide"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide"
 }
