--- a/CourseWork/build.gradle
+++ b/CourseWork/build.gradle
@@ -1,6 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.21"
+    ext.kotlin_version = "1.4.32"
     ext.hiltPlugin = '2.38.1'
     repositories {
         google()
@@ -39,9 +39,15 @@ ext {
     materialVersion = '1.4.0'
     constraintLayoutVersion = '2.1.1'
     rxJavaVersion = '2.1.1'
-    rxBinding = '4.0.0'
+    rxBinding = '3.0.0'
     hiltAndroid = '2.35'
     shimmerLayout = '0.5.0'
     fragmentKtx = '1.3.6'
     activityKtx = '1.3.1'
+    glide = "4.12.0"
+    retrofit = "2.9.0"
+    serilizationConverterForRetrofit = "0.8.0"
+    serilizationConverter = "1.2.2"
+    loggingInterceptor = "4.9.0"
+    rxJavaRetrofitAdapter = "2.3.0'"
 }
