--- a/CourseWork/app/build.gradle
+++ b/CourseWork/app/build.gradle
@@ -78,4 +78,8 @@ dependencies {
 
     implementation "com.github.bumptech.glide:glide:$glide"
     annotationProcessor "com.github.bumptech.glide:compiler:$glide"
+
+    implementation "com.github.vivid-money.elmslie:elmslie-core:$elmsilie"
+    implementation "com.github.vivid-money.elmslie:elmslie-android:$elmsilie"
+    implementation "com.github.vivid-money.elmslie:elmslie-rxjava-2:$elmsilie"
 }
