--- a/CourseWork/app/build.gradle
+++ b/CourseWork/app/build.gradle
@@ -74,7 +74,7 @@ dependencies {
     implementation "androidx.work:work-rxjava2:$workManagerVersion"
 
     implementation "com.github.bumptech.glide:glide:$glide"
-    annotationProcessor "com.github.bumptech.glide:compiler:$glide"
+    kapt "com.github.bumptech.glide:compiler:$glide"
 
     implementation "com.github.vivid-money.elmslie:elmslie-core:$elmsilie"
     implementation "com.github.vivid-money.elmslie:elmslie-android:$elmsilie"
