--- a/CourseWork/app/src/main/AndroidManifest.xml
+++ b/CourseWork/app/src/main/AndroidManifest.xml
@@ -27,8 +27,9 @@
         <provider
             android:name="androidx.work.impl.WorkManagerInitializer"
             android:authorities="${applicationId}.workmanager-init"
-            tools:node="remove"
-            android:exported="false" />
+            android:exported="false"
+            android:enabled="false"
+            tools:node="remove" />
     </application>
 
 </manifest>
